--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('./partials/head.ejs') %>
-    <title>Bootstrap demo</title>
+    <title>home</title>
   </head>
   <body>
     <%- include('./partials/nav.ejs') %>
