--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,11 @@
   </head>
   <body>
     <%- include('./partials/nav.ejs') %>
+    <% if (locals.user) { %>
+      
+      <% } else { %>
+       
+        <% } %>
     <%- include('./partials/script.ejs') %>
   </body>
 </html>
