--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,130 @@
     <% if (locals.user) { %>
       
       <% } else { %>
-       
+        <div id="carouselExampleCaptions"  class="carousel slide carousel-fade">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/images/image2.jpg" class="d-block w-100" alt="image2">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 >Growth Mindset</h5>
+                <p>“There is nothing noble in being superior to your fellow man; true nobility is being superior to your former self.”</p>
+                <button type="button" class="btn btn-danger">positive attitude</button>
+                <button type="button" class="btn btn-primary">Be a team player</button>
+                <button type="button" class="btn btn-success">Be considerate</button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/images/image1.jpg" class="d-block w-100" alt="image1">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 >Clarity of Purpose</h5>
+                <p>Most people know what they don't want, fewer know what they truly do want. So clarity is the key</p>
+                <button type="button" class="btn btn-danger">positive attitude</button>
+                <button type="button" class="btn btn-primary">Be a team player</button>
+                <button type="button" class="btn btn-success">Be considerate</button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/images/image3.jpg" class="d-block w-100" alt="image3">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 >Courage</h5>
+                <p >"It always seems impossible until it's done."</p>
+                <button type="button" class="btn btn-danger">positive attitude</button>
+                <button type="button" class="btn btn-primary">Be a team player</button>
+                <button type="button" class="btn btn-success">Be considerate</button>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <div class="card-group">
+          <div class="card">
+            <img src="images/user.jpg" class="card-img-top" alt="userpic" height="200px">
+            <div class="card-body">
+              <h5 class="card-title">Mukesh singh</h5>
+              <p class="card-text">Address :- Rudrdapur, uttarakhand <br> Contact number:- 9054XXXXXX <br> Role:- Helper</p>
+              <a class="btn btn-primary" href="/user/signin" role="button">View details</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/user.jpg" class="card-img-top" alt="userpic" height="200px">
+            <div class="card-body">
+              <h5 class="card-title">Vansh Pal</h5>
+              <p class="card-text">Address :- Kashipur, uttarakhand <br> Contact number:- 8452XXXXXX <br> Role:- Helper</p>
+              <a class="btn btn-primary" href="/user/signin" role="button">View details</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/user.jpg" class="card-img-top" alt="userpic" height="200px">
+            <div class="card-body">
+              <h5 class="card-title">Mansi Sarkar</h5>
+              <p class="card-text">Address :- Rudrdapur, uttarakhand <br> Contact number:- 9484XXXXXX <br> Role:- Helper </p>
+              <a class="btn btn-primary" href="/user/signin" role="button">View details</a>
+            </div>
+          </div>
+        </div>
+
+        <footer class="py-5">
+          <div class="row">
+            <div class="col-6 col-md-2 mb-3">
+              <h5>Section</h5>
+              <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+              </ul>
+            </div>
+      
+            <div class="col-6 col-md-2 mb-3">
+              <h5>Section</h5>
+              <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+              </ul>
+            </div>
+      
+            <div class="col-6 col-md-2 mb-3">
+              <h5>Section</h5>
+              <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+              </ul>
+            </div>
+      
+            <div class="col-md-5 offset-md-1 mb-3">
+              <form>
+                <h5>Subscribe to our Application</h5>
+                <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                  <label for="newsletter1" class="visually-hidden">Email address</label>
+                  <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                  <button class="btn btn-primary" type="button">Subscribe</button>
+                </div>
+              </form>
+            </div>
+          </div>
+             <p class="text-center text-body-secondary">© 2024 vaibhav bhatt</p>
+        </footer>
+        
         <% } %>
     <%- include('./partials/script.ejs') %>
   </body>
