fixing some error

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -83,7 +83,18 @@
             </div>
           </div>
         </div>
-
+        
+        <div class="container2">
+          <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+              <h1 class="fw-light">About Our site </h1>
+              <p class="lead text-body-secondary">
+                Job portals are online platforms that connect job seekers with employers
+                
+              </p>
+            </div>
+          </div>
+        </div>
         <footer class="py-5">
           <div class="row">
             <div class="col-6 col-md-2 mb-3">
