--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,5 +1,5 @@
 body{
-background-color: #828585;
+background-color: #f6fabc;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -18,6 +18,13 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 .card-title{
     text-align: center;
 }
-#footer{
-    text-align: center;
+
+.container2{
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    padding-top: 1rem;
+    background-color: rgb(212, 229, 244);
+    border-radius: 25px;
+    box-shadow: 1px 1px  1px  rgb(5, 5, 5) ;
 }
