--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,7 +11,7 @@
         </li>
         <% if (locals.user) { %>
           <li class="nav-item">
-            <a class="nav-link" href="/blog/add-new">Add employee</a>
+            <a class="nav-link" href="/employee/add-new">Add employee</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
