--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,21 @@
   <body>
     <%- include('./partials/nav.ejs') %>
     <% if (locals.user) { %>
-      
+      <div class="container mt-3">
+        <div class="row row-cols-4">
+          <% employees.forEach(employee => { %>
+          <div class="col">
+            <div class="card col" style="width: 18rem">
+              <img src="<%= employee.coverImageURL %>" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title"><%= blog.title %></h5>
+                <a href="/employee/<%= employee._id %>" class="btn btn-primary">View</a>
+              </div>
+            </div>
+          </div>
+          <% }) %>
+        </div>
+      </div>
       <% } else { %>
         <div id="carouselExampleCaptions"  class="carousel slide carousel-fade">
           <div class="carousel-indicators">
