--- a/views/addemployee.ejs
+++ b/views/addemployee.ejs
@@ -20,19 +20,76 @@
           />
         </div>
         <div class="mb-3">
-          <label for="title" class="form-label">Title</label>
+          <label for="Name" class="form-label">Full Name</label>
           <input
             type="text"
             class="form-control"
-            id="title"
-            name="title"
-            aria-describedby="title"
+            id="Name"
+            name="Name"
+            aria-describedby="Name"
           />
         </div>
         <div class="mb-3">
-          <label for="body">Body</label>
-          <textarea name="body" class="form-control" id="body"></textarea>
+          <label for="ContactNumber" class="form-label">Contact number</label>
+          <input
+            type="text"
+            class="form-control"
+            id="ContactNumber"
+            name="ContactNumber"
+            aria-describedby="ContactNumber"
+          />
         </div>
+        <div class="mb-3">
+          <label for="Address" class="form-label">Address</label>
+          <input
+            type="text"
+            class="form-control"
+            id="Address"
+            name="Address"
+            aria-describedby="Address"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="AddharcardNumber" class="form-label">Addharcard Number</label>
+          <input
+            type="text"
+            class="form-control"
+            id="AddharcardNumber"
+            name="AddharcardNumber"
+            aria-describedby="AddharcardNumber"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="PANcard" class="form-label">PAN card number</label>
+          <input
+            type="text"
+            class="form-control"
+            id="PANcard"
+            name="PANcard"
+            aria-describedby="PANcard"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="Role" class="form-label">Role</label>
+          <input
+            type="text"
+            class="form-control"
+            id="Role"
+            name="Role"
+            aria-describedby="Role"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="Experience" class="form-label">Experience</label>
+          <input
+            type="text"
+            class="form-control"
+            id="Experience"
+            name="Experience"
+            aria-describedby="Experience"
+          />
+        </div>
+       
         <div class="mb-3">
           <button class="btn btn-primary">Submit</button>
         </div>
