--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,7 +15,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              vaibhav bhatt
+              User 
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
