--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,11 +11,11 @@
         <div class="row row-cols-4">
           <% employees.forEach(employee => { %>
           <div class="col">
-            <div class="card col" style="width: 18rem" >
+            <div class="card col " style="width: 12rem" >
               <img src="<%= employee.coverImageURL %>" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title"><%= employee.Name %></h5>
-                <a href="/employee/<%= employee._id %>" class="btn btn-primary">View Details</a>
+                <a href="/employee/<%= employee._id %>" class="btn btn-primary">View details</a>
               </div>
             </div>
           </div>
