--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,43 +1,45 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Job seekers</a>
+    <a class="navbar-brand fw-bold" href="#">Job Seekers</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
+        
         <% if (locals.user) { %>
           <li class="nav-item">
-            <a class="nav-link" href="/employee/add-new">Add employee</a>
+            <a class="nav-link" href="/employee/add-new">Add Employee</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              User 
+              User
             </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu dropdown-menu-end">
               <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
             </ul>
           </li>
-          <% } else { %>
-            <li class="nav-item">
-              <a class="nav-link" href="/user/signup">Create Account</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/user/signin">Signin</a>
-            </li>
-            <% } %>
-        
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/signup">Create Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/signin">Sign In</a>
+          </li>
+        <% } %>
       </ul>
     </div>
   </div>
 </nav>
-<% if(locals.error) { %>
+
+<% if (locals.error) { %>
   <div class="container mt-4">
-  <div class = "alert alert-danger" role ="alert">
- <%=  locals.error %>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <%= locals.error %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
   </div>
-  </div>
-  <% } %> 
+<% } %>
